feat(request_handler): publish request to rabbitmq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3.8'
 services:
   request_handler:
+    depends_on:
+      db:
+        condition: service_healthy
+      migrate_db:
+        condition: service_completed_successfully
+      rabbitmq:
+        condition: service_healthy
     build:
       context: request_handler
       cache_from:
@@ -22,11 +29,9 @@ services:
       POSTGRES_PASSWORD: db_password
       POSTGRES_DB: requests_db
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB -p POSTGRES_PASSWORD" ]
-      interval: 30s
-      retries: 3
-    ports:
-      - "5432"
+      test: ["CMD", "pg_isready", "-U", "request_manager", "-d", "requests_db"]
+      interval: 5s
+      retries: 10
     volumes:
       - pg_data:/var/lib/postgresql/data/
 
@@ -38,10 +43,24 @@ services:
     command:
       - "bash"
       - "-c"
-      - "./migrate.sh"
+      - "./migrate_db.sh"
     environment:
       - POSTGRES_PASSWORD
 
+  rabbitmq:
+    image: rabbitmq:3.13-management
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "wait", "--timeout", "60", "rabbit@localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    environment:
+      RABBITMQ_DEFAULT_USER: request_manager
+      RABBITMQ_DEFAULT_PASS: rabbitmq_password
+      RABBITMQ_DEFAULT_VHOST: request_vhost
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
 
 volumes:
   pg_data:
+  rabbitmq_data:
