fix: change rabbitmq service healthcheck command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
   rabbitmq:
     image: rabbitmq:3.13-management
     healthcheck:
-      test: rabbitmq-diagnostics -q ping
+      test: ["CMD", "rabbitmqctl", "status"]
       interval: 5s
       retries: 10
     environment:
